@@ -248,7 +248,16 @@ namespace libdar
 	{
 	    try
 	    {
-		val = sec*get_scaling_factor(tu_second, unit) + subsec;
+		if(tu_second == unit)
+		    val = sec;
+		    // this saves an infinint multiplication and fixes
+		    // a bug when reading an archive generated by dar 2.4.x or
+		    // below that included a file for which the system returned
+		    // a negative date, which was read by libdar as a huge positive
+		    // number, that much that multiplying it by 1 triggers the
+		    // limiting overflow mecanism
+		else
+		    val = sec*get_scaling_factor(tu_second, unit) + subsec;
 		uni = unit;
 		loop = false;
 	    }
